# php-formatter-rust

./: .phpfmt.toml  Cargo.toml  README.md  test_sample.php
.cargo/: config.toml
src/: config.rs  formatter.rs  main.rs  parser.rs  protocol.rs
src/rules/: align.rs  align_arrows.rs  align_comments.rs  frozen.rs  indent.rs  mod.rs  spacing.rs
