[package]
name = "php_formatter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "php_formatter"
path = "src/main.rs"

[dependencies]
json  = "0.12"
# FIX-3: serde + toml replace the hand-written TOML parser.
# serde: the Rust serialization standard — derive macros enable #[serde(deny_unknown_fields)].
# toml 0.8: current stable release; uses serde natively; no extra runtime deps.
serde = { version = "1", features = ["derive"] }
toml  = "0.8"

[profile.release]
opt-level = 3
lto = true
strip = true
